--- a/math/book.html
+++ b/math/book.html
@@ -20,6 +20,7 @@
   </header>
 
   <main> 
+	  <!--
 	  <center>
 	  <p><a href="https://a.co/d/1TlDwVs" target="_blank">available</a> on amazon</h1></p>
 	  </center>
@@ -27,6 +28,17 @@
     <div class="hero">
       <img src="math-kook-cover.jpg" alt="Math Kook cover" class="book-cover">
     </div>
+	  -->
+
+    <div class="gallery thumbs">
+      <a href="https://a.co/d/1TlDwVs" class="thumb">
+        <figure>
+          <img src="math-kook-cover.jpg" alt="Math Kook">
+	  <!--          <figcaption>Math Kook</figcaption>   -->
+        </figure>
+      </a>
+    </div>
+
   </main>
 
   <footer><p>&copy; 2025 Kevin Knight</p></footer>
