--- a/likes/index.html
+++ b/likes/index.html
@@ -22,7 +22,8 @@
   <!-- Main content -->
   <main>
   <center>
-	  likes<br><br>
+	  <!-- likes: --> 
+	  &#9829;<br><br>
 
 <a href="https://en.wikipedia.org/wiki/Don%27t_Get_Me_Wrong_(song)" class="nounderline">Don't Get Me Wrong by Pretenders</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Tangerine_(Led_Zeppelin_song)" class="nounderline">Tangerine by Led Zeppelin</a><br><br>
