--- a/fiction/books.html
+++ b/fiction/books.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Novels | Kevin Knight</title>
+  <title>Books | Kevin Knight</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -15,7 +15,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Novels</h1>
+    <h1 class="page-title">Books</h1>
   </header>
 
   <main> 
