--- a/fiction/index.html
+++ b/fiction/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <ul>
         <li><a href="stories.html">Stories</a></li>
-        <li><a href="novels.html">Novels</a></li>
+        <li><a href="books.html">Books</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
