--- a/fiction/contact.html
+++ b/fiction/contact.html
@@ -13,7 +13,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="stories.html">Stories</a></li>
-        <li><a href="novels.html">Novels</a></li>
+        <li><a href="books.html">Books</a></li>
       </ul>
     </nav>
     <h1 class="page-title">Contact</h1>
