--- a/fiction/stories.html
+++ b/fiction/stories.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="novels.html">Novels</a></li>
+        <li><a href="books.html">Books</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
