--- a/math/book.html
+++ b/math/book.html
@@ -33,7 +33,7 @@
     <div class="gallery thumbs">
       <a href="https://a.co/d/1TlDwVs" class="thumb">
         <figure>
-          <img src="math-kook-cover.jpg" width=100px alt="Math Kook">
+          <img src="math-kook-cover.jpg" alt="Math Kook">
 	  <!--          <figcaption>Math Kook</figcaption>   -->
         </figure>
       </a>
