--- a/math/book.html
+++ b/math/book.html
@@ -30,6 +30,7 @@
     </div>
 	  -->
 
+	  <center>
     <div class="gallery thumbs">
       <a href="https://a.co/d/1TlDwVs" class="thumb">
         <figure>
@@ -38,6 +39,7 @@
         </figure>
       </a>
     </div>
+	  </center>
 
   </main>
 
