--- a/fiction/stories.html
+++ b/fiction/stories.html
@@ -23,7 +23,7 @@
       <a href="genko-kitsu-knight.pdf" class="article-card">
         Kitsu Went Missing (in Japanese) &nbsp;•&nbsp; PDF
       <a href="https://kevincrawfordknight.github.io/extra/westbank.txt" class="article-card">
-        Little House on the West Bank &nbsp;•&nbsp; text 
+        Little House on the West Bank &nbsp;•&nbsp; Text 
       </a>
     </div>
   </main>
