--- a/movies/movies.html
+++ b/movies/movies.html
@@ -12,6 +12,7 @@
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="tv.html">TV</a></li>
+        <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
