--- a/movies/index.html
+++ b/movies/index.html
@@ -13,6 +13,7 @@
       <ul>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
+        <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
