--- a/comics/book.html
+++ b/comics/book.html
@@ -19,16 +19,17 @@
   </header>
 
   <main> 
+
 	  <center>
-	  <p>coming to amazon</p>
-<!--
-	  <p><a href="../comics/index.html" target="_blank">available</a> on amazon</h1></p>
--->
-	  </center>
-	  <br>
-    <div class="hero">
-      <img src="tofu-buffet-cover.png" alt="Tofu Buffet cover" class="book-cover">
+    <div class="gallery thumbs">
+      <a href="." class="thumb">
+        <figure>
+          <img src="tofu-buffet-cover.png" alt="Off the Rails">
+        </figure>
+      </a>
     </div>
+	  </center>
+
   </main>
 
   <footer><p>&copy; 2025 Tofu Buffet</p></footer>
