--- a/comics/index.html
+++ b/comics/index.html
@@ -24,8 +24,7 @@
 
   <!-- Main content -->
   <main>
-    <p class="intro">Welcome to promote comics from my 15-year-old nephew, who goes by
-    the handles tofu_buffet, log_eater10, and gator_eel10.</p>
+    <p class="intro">Welcome to promote comics from my 15-year-old nephew who goes by the handles tofu_buffet, log_eater10, and gator_eel10.</p>
   </main>
 
   <!-- Footer -->
