--- a/comics/book.html
+++ b/comics/book.html
@@ -22,7 +22,7 @@
 
 	  <center>
     <div class="gallery thumbs">
-      <a href="." class="thumb">
+      <a href="books.html" class="thumb">
         <figure>
           <img src="tofu-buffet-cover.png" alt="Off the Rails">
         </figure>
