--- a/movies/index.html
+++ b/movies/index.html
@@ -14,6 +14,7 @@
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
         <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
+        <li><a href="articles.html">Ciphers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
