--- a/movies/movies.html
+++ b/movies/movies.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="tv.html">TV</a></li>
         <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
+        <li><a href="articles.html">Ciphers</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
