--- a/comics/book.html
+++ b/comics/book.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Book | Kevin Knight</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <header>
@@ -22,7 +22,7 @@
 
 	  <center>
     <div class="gallery thumbs">
-      <a href="books.html" class="thumb">
+      <a href="book.html" class="thumb">
         <figure>
           <img src="tofu-buffet-cover.png" alt="Off the Rails">
         </figure>
