--- a/movies/articles.html
+++ b/movies/articles.html
@@ -3,7 +3,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Articles | Kevin Knight</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
   <header>
@@ -20,7 +20,7 @@
   </header>
 
   <main>
-	  <center> Peer-reviewed articles on decipherment. </center>
+	  <center> peer-reviewed articles on decipherment </center><br>
     <div class="article-list">
 
 	    <!--
