--- a/fiction/books.html
+++ b/fiction/books.html
@@ -20,6 +20,24 @@
 
   <main> 
 
+    <div class="gallery thumbs">
+      <a href="animales-cover.png" class="thumb">
+        <figure>
+          <img src="animales-cover.png" alt="Animales">
+	  <!--          <figcaption>Math Kook YouTube Channel</figcaption>   -->
+        </figure>
+      </a>
+      <br>
+
+      <a href="books.html" class="thumb">
+        <figure>
+          <img src="empire-cover.jpg" alt="Empire of Liberty">
+	  <!--          <figcaption>Collatz Conjecture Series</figcaption>   -->
+        </figure>
+      </a>
+      <br>
+    </div>
+
   </main>
 
   <footer><p>&copy; 2025 Kevin Knight</p></footer>
