--- a/ai/talks.html
+++ b/ai/talks.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Contact | Kevin Knight</title>
+  <title>Recent Talks | Kevin Knight</title>
   <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-  <!-- Header with Navigation -->
   <header>
     <nav class="navbar">
       <ul>
@@ -15,24 +14,28 @@
         <li><a href="articles.html">Articles</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
-        <li><a href="talks.html">Talks</a></li>
+        <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Contact</h1>
+    <!--
+    <h1 class="page-title">Students</h1>
+    -->
   </header>
 
-  <!-- Main content -->
   <main>
-    <center>
-      <p>email: </p>
-      <br>
-    <p>kevin.crawford.knight@gmail.com</p> 
-    </center>
+	  <!--	  <center>PhD</center> -->
+    <h1 class="page-title">Recent Talks</h1>
+	  <p>
+	  test
+	  <p>
+	  test
+	  <p>
+	  test
+    </div>
+
   </main>
 
-  <!-- Footer -->
-  <footer>
-    <p>&copy; 2025 Kevin Knight</p>
-  </footer>
+  <footer><p>&copy; 2025 Kevin Knight</p></footer>
 </body>
 </html>
+
