--- a/ai/articles.html
+++ b/ai/articles.html
@@ -12,6 +12,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+        <li><a href="talks.html">Talks</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
