--- a/ai/index.html
+++ b/ai/index.html
@@ -14,6 +14,7 @@
         <li><a href="articles.html">Articles</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
+        <li><a href="talks.html">Talks</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
