--- a/fiction/books.html
+++ b/fiction/books.html
@@ -21,10 +21,10 @@
   <main> 
 
     <div class="gallery thumbs">
-      <a href="animales-cover.png" class="thumb">
+      <a href="https://a.co/d/cEMLfuF" class="thumb">
         <figure>
           <img src="animales-cover.png" alt="Animales">
-	  <!--          <figcaption>Math Kook YouTube Channel</figcaption>   -->
+          <figcaption>for little kids</figcaption>   
         </figure>
       </a>
       <br>
@@ -32,7 +32,7 @@
       <a href="books.html" class="thumb">
         <figure>
           <img src="empire-cover.jpg" alt="Empire of Liberty">
-	  <!--          <figcaption>Collatz Conjecture Series</figcaption>   -->
+          <figcaption>for big kids</figcaption>   
         </figure>
       </a>
       <br>
