--- a/newindex.html
+++ b/newindex.html
@@ -14,6 +14,10 @@
   </header>
 	</center>
 
+	<center>
+	... test current state ...
+	</center>
+
   <main class="button-grid">
     <!-- order: ai, art, math, comics, fiction, movies, classic -->
     <a href="likes/index.html"      aria-label="Pic">      <img src="headshot-kk.jpg"      alt="Pic"></a>
