--- a/newindex.html
+++ b/newindex.html
@@ -39,12 +39,46 @@
 <script>
   // 1) Define your list of status strings
   const statuses = [
-		  "is not a nark",
-		  "does whatever he wants",
-		  "talks in maths",
-		  "never finishes",
-		  "currently splits his time between indoors and outdoors"
-  ];
+ "is not a nark",
+ "does whatever he wants",
+ "talks in maths",
+ "never finishes",
+ "currently splits his time between indoors and outdoors",
+ "can't quite remember",
+ "is literally inside of a building right now",
+ "wears band shirts",
+ "inhabits a reality",
+ "was once in an elevator with a celebrity",
+ "plays the monkey jump",
+ "usually opens with f3",
+ "331 &middot; 1,210,483 &middot; 45,661,129 &middot; 107,889,071",
+ "has that dream where you're late for the test",
+ "sees patterns where there literally aren't any",
+ "needs a haircut",
+ "should apply himself more",
+ "laughs at his own jokes",
+ "wants to see you",
+ "missed a belt loop",
+ "impresses your mother",
+ "grayed at seventeen",
+ "no sugar, please",
+ "back to the lecture at hand",
+ "voted for Th&auml;lmann",
+ "once put two spaces after a period",
+ "might or might not",
+ "is unsupervised",
+ "is unprepared for the jump scare",
+ "is still on the payroll",
+ "anybody seen the cat?",
+ "is on the verge",
+ "stands corrected",
+ "is better than expected",
+ "wait, what?"
+ "gets pulled over",
+ "has half a brain",
+ "no time to explain",
+ "is easily amused"
+	  ];
 
   // 2) Pick one at random
   const pick = statuses[Math.floor(Math.random() * statuses.length)];
