--- a/newindex.html
+++ b/newindex.html
@@ -73,12 +73,11 @@
  "is on the verge",
  "stands corrected",
  "is better than expected",
- "wait, what?"
+ "wait, what?",
  "gets pulled over",
  "has half a brain",
  "no time to explain",
- "is easily amused"
-	  ];
+ "is easily amused" ];
 
   // 2) Pick one at random
   const pick = statuses[Math.floor(Math.random() * statuses.length)];
