--- a/movies/movies.html
+++ b/movies/movies.html
@@ -21,13 +21,25 @@
   </header>
 
   <main> 
+
 	  <center>
-	  <p><a href="https://a.co/d/1TlDwVs" target="_blank">available</a> on amazon</h1></p>
-	  </center>
-	  <br>
-    <div class="hero">
-      <img src="math-kook-cover.jpg" alt="Math Kook cover" class="book-cover">
+    <div class="gallery thumbs">
+      <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake" class="thumb">
+        <figure>
+          <img src="utsl.png" alt="Under the Silver Lake">
+	  <figcaption>Cryptography consultant; I created ciphers for the movie. <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">Reddit</a>'s on the case.</figcaption>   
+        </figure>
+      </a>
     </div>
+	  </center>
+
+
+
+
+
+
+
+
   </main>
 
   <footer><p>&copy; 2025 Kevin Knight</p></footer>
