--- a/movies/movies.html
+++ b/movies/movies.html
@@ -27,7 +27,7 @@
       <a href="https://en.wikipedia.org/wiki/Under_the_Silver_Lake" class="thumb">
         <figure>
           <img src="utsl.png" alt="Under the Silver Lake">
-	  <figcaption>Cryptography consultant; I created ciphers for the movie. <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">Reddit</a>'s on the case.</figcaption>   
+	  <figcaption>Cryptography consultant. I created ciphers for the movie. <a href="https://www.reddit.com/r/underthesilverlake/comments/a8ui73/biggest_discovery_of_the_utsl_mystery">Reddit</a> is on the case.</figcaption>   
         </figure>
       </a>
     </div>
