--- a/movies/tv.html
+++ b/movies/tv.html
@@ -21,15 +21,42 @@
   </header>
 
   <main>
-    <div class="article-list">
-      <a href="https://hal.science/hal-04261183v1/document" class="article-card">
-        Collatz High Cycles Do Not Exist &nbsp;•&nbsp; PDF
+
+	  <center>
+    <div class="gallery thumbs">
+
+      <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3" class="thumb">
+        <figure>
+          <img src="zodiac.png" alt="The Hunt for the Zodiac Killer">
+	  <figcaption>We didn't crack the infamous Z340 cipher in s1e1-s1e5, but team member <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">David Oranchak</a> did it three years later.</figcaption>   
+        </figure>
       </a>
-      
-      <a href="https://hal.science/hal-04080486v1/document" class="article-card">
-        A Small Collatz Rule without the Plus One &nbsp;•&nbsp; PDF
+
+      <a href="https://www.imdb.com/title/tt11345432/?ref_=ttep_ep_4" class="thumb">
+        <figure>
+          <img src="wilkinson.png" alt="Wilkinson Cipher">
+	  <figcaption>Incredibly, in the early years of the American Republic, the head of the Army and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
+        </figure>
       </a>
+
+      <a href="https://www.imdb.com/title/tt6480098/?ref_=nm_knf_epp_sm_1" class="thumb">
+        <figure>
+          <img src="oak-island.png" alt="The Curse of Oak Island">
+	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>   
+        </figure>
+      </a>
+
+
     </div>
+	  </center>
+
+
+
+
+
+
+
+
   </main>
 
   <footer><p>&copy; 2025 Kevin Knight</p></footer>
