--- a/newindex.html
+++ b/newindex.html
@@ -51,7 +51,7 @@
  "was once in an elevator with a celebrity",
  "plays the monkey jump",
  "usually opens with f3",
- "331 &middot; 1,210,483 &middot; 45,661,129 &middot; 107,889,071",
+ "331 - 1,210,483 - 45,661,129 - 107,889,071",
  "has that dream where you're late for the test",
  "sees patterns where there literally aren't any",
  "needs a haircut",
@@ -63,7 +63,7 @@
  "grayed at seventeen",
  "no sugar, please",
  "back to the lecture at hand",
- "voted for Th&auml;lmann",
+ "voted for Thalmann",
  "once put two spaces after a period",
  "might or might not",
  "is unsupervised",
