--- a/movies/tv.html
+++ b/movies/tv.html
@@ -34,14 +34,14 @@
 
       <a href="https://www.imdb.com/title/tt11345432/?ref_=ttep_ep_4" class="thumb">
         <figure>
-          <img src="wilkinson.png" alt="Wilkinson Cipher">
+          <img src="wilkinson.jpg" alt="Wilkinson Cipher">
 	  <figcaption>Incredibly, in the early years of the American Republic, the head of the Army and governor of the Louisiana Territory was a Spanish spy. In s1e4, we investigated his secret communications and reported our method in this <a href="https://arxiv.org/pdf/2010.04746">paper</a>.</figcaption>   
         </figure>
       </a>
 
       <a href="https://www.imdb.com/title/tt6480098/?ref_=nm_knf_epp_sm_1" class="thumb">
         <figure>
-          <img src="oak-island.png" alt="The Curse of Oak Island">
+          <img src="oak-island.jpg" alt="The Curse of Oak Island">
 	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>   
         </figure>
       </a>
