--- a/movies/tv.html
+++ b/movies/tv.html
@@ -28,7 +28,7 @@
       <a href="https://www.imdb.com/title/tt7784996/?ref_=nm_knf_t_3" class="thumb">
         <figure>
           <img src="zodiac.png" alt="The Hunt for the Zodiac Killer">
-	  <figcaption>We didn't crack the infamous Z340 cipher in s1e1-s1e5, but team member <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">David Oranchak</a> did it three years later.</figcaption>   
+	  <figcaption>We didn't crack the infamous Z340 cipher in s1e1-5, but team member David Oranchak did it <a href="https://www.youtube.com/watch?v=-1oQLPRE21o">three years later</a>.</figcaption>   
         </figure>
       </a>
 
@@ -42,7 +42,7 @@
       <a href="https://www.imdb.com/title/tt6480098/?ref_=nm_knf_epp_sm_1" class="thumb">
         <figure>
           <img src="oak-island.jpg" alt="The Curse of Oak Island">
-	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>   
+	  <figcaption>In s1e13, Nada Aldarrab and I took a look at an enciphered map.</figcaption>
         </figure>
       </a>
 
