--- a/comics/comics.html
+++ b/comics/comics.html
@@ -74,33 +74,33 @@
   <script>
     // 1) List your 29 filenames exactly as they live in this folder:
     const comics = [
-'acceptable-tb-framed.jpg',
-'beatles2-tb-framed.jpg',
-'blaming-tb-framed.jpg',
-'chinese-food-tb-framed.jpg',
-'climb-a-tree-tb-framed.jpg',
-'fava-tb-framed.jpg',
-'french-tb-framed.jpg',
-'gaslighting2-tb-framed.jpg',
-'gemini-tb-framed.jpg',
-'greece-tb-framed.jpg',
-'height-tb-framed.jpg',
-'jesus-tb-framed.jpg',
-'just-friends-tb-framed.jpg',
-'monk-tb-framed.jpg',
-'passive-aggressive-tb-framed.jpg',
-'red-flag-tb-framed.jpg',
-'satan-tb-framed.jpg',
-'sayit-tb-framed.jpg',
-'significantly-tb-framed.jpg',
-'straws-tb-framed.jpg',
-'uploaded-HOMEPAGE',
-'veni-tb-framed.jpg',
-'who-they-really-are-tb-framed.jpg',
-'with-us-tb-framed.jpg',
-'wonder-tb-framed.jpg',
-'work-life-tb-framed.jpg',
-'yakistani-tb-framed.jpg'
+'images/acceptable-tb-framed.jpg',
+'images/beatles2-tb-framed.jpg',
+'images/blaming-tb-framed.jpg',
+'images/chinese-food-tb-framed.jpg',
+'images/climb-a-tree-tb-framed.jpg',
+'images/fava-tb-framed.jpg',
+'images/french-tb-framed.jpg',
+'images/gaslighting2-tb-framed.jpg',
+'images/gemini-tb-framed.jpg',
+'images/greece-tb-framed.jpg',
+'images/height-tb-framed.jpg',
+'images/jesus-tb-framed.jpg',
+'images/just-friends-tb-framed.jpg',
+'images/monk-tb-framed.jpg',
+'images/passive-aggressive-tb-framed.jpg',
+'images/red-flag-tb-framed.jpg',
+'images/satan-tb-framed.jpg',
+'images/sayit-tb-framed.jpg',
+'images/significantly-tb-framed.jpg',
+'images/straws-tb-framed.jpg',
+'images/uploaded-HOMEPAGE',
+'images/veni-tb-framed.jpg',
+'images/who-they-really-are-tb-framed.jpg',
+'images/with-us-tb-framed.jpg',
+'images/wonder-tb-framed.jpg',
+'images/work-life-tb-framed.jpg',
+'images/yakistani-tb-framed.jpg'
     ];
 
     let current = 0;
