--- a/comics/comics.html
+++ b/comics/comics.html
@@ -54,7 +54,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Comics</h1>
+    <h1 class="page-title">Tofu Buffet Comics</h1>
   </header>
 
   <main>
@@ -74,33 +74,33 @@
   <script>
     // 1) List your 29 filenames exactly as they live in this folder:
     const comics = [
-'images/acceptable-tb-framed.jpg',
-'images/beatles2-tb-framed.jpg',
-'images/blaming-tb-framed.jpg',
-'images/chinese-food-tb-framed.jpg',
-'images/climb-a-tree-tb-framed.jpg',
-'images/fava-tb-framed.jpg',
-'images/french-tb-framed.jpg',
-'images/gaslighting2-tb-framed.jpg',
-'images/gemini-tb-framed.jpg',
-'images/greece-tb-framed.jpg',
-'images/height-tb-framed.jpg',
-'images/jesus-tb-framed.jpg',
-'images/just-friends-tb-framed.jpg',
-'images/monk-tb-framed.jpg',
-'images/passive-aggressive-tb-framed.jpg',
-'images/red-flag-tb-framed.jpg',
-'images/satan-tb-framed.jpg',
-'images/sayit-tb-framed.jpg',
-'images/significantly-tb-framed.jpg',
-'images/straws-tb-framed.jpg',
-'images/uploaded-HOMEPAGE',
-'images/veni-tb-framed.jpg',
-'images/who-they-really-are-tb-framed.jpg',
-'images/with-us-tb-framed.jpg',
-'images/wonder-tb-framed.jpg',
-'images/work-life-tb-framed.jpg',
-'images/yakistani-tb-framed.jpg'
+'trimmed/acceptable-tb-framed.jpg',
+'trimmed/beatles2-tb-framed.jpg',
+'trimmed/blaming-tb-framed.jpg',
+'trimmed/chinese-food-tb-framed.jpg',
+'trimmed/climb-a-tree-tb-framed.jpg',
+'trimmed/fava-tb-framed.jpg',
+'trimmed/french-tb-framed.jpg',
+'trimmed/gaslighting2-tb-framed.jpg',
+'trimmed/gemini-tb-framed.jpg',
+'trimmed/greece-tb-framed.jpg',
+'trimmed/height-tb-framed.jpg',
+'trimmed/jesus-tb-framed.jpg',
+'trimmed/just-friends-tb-framed.jpg',
+'trimmed/monk-tb-framed.jpg',
+'trimmed/passive-aggressive-tb-framed.jpg',
+'trimmed/red-flag-tb-framed.jpg',
+'trimmed/satan-tb-framed.jpg',
+'trimmed/sayit-tb-framed.jpg',
+'trimmed/significantly-tb-framed.jpg',
+'trimmed/straws-tb-framed.jpg',
+'trimmed/uploaded-HOMEPAGE',
+'trimmed/veni-tb-framed.jpg',
+'trimmed/who-they-really-are-tb-framed.jpg',
+'trimmed/with-us-tb-framed.jpg',
+'trimmed/wonder-tb-framed.jpg',
+'trimmed/work-life-tb-framed.jpg',
+'trimmed/yakistani-tb-framed.jpg'
     ];
 
     let current = 0;
