--- a/ai/students.html
+++ b/ai/students.html
@@ -27,29 +27,29 @@
     <h1 class="page-title">PhD Students</h1>
 	  <p>
     <div class="article-list">
-      <a href="" class="article-card">Nima Pourdamghani </a>
-      <a href="" class="article-card">Xing Shi</a>
-      <a href="" class="article-card">Marjan Ghazvininejad </a>
-      <a href="" class="article-card">Qing Dou</a>
-      <a href="" class="article-card">Steve DeNeefe</a>
-      <a href="" class="article-card">Sujith Ravi </a>
-      <a href="" class="article-card">Jonathan May</a>
-      <a href="" class="article-card">Yaser Al-Onaizan</a>
-      <a href="" class="article-card">Kenji Yamada</a>
-      <a href="" class="article-card">Irene Langkilde</a>
-      <a href="" class="article-card">Philipp Koehn</a>
+      <a href="https://wired.me/technology/ai-revolution-saudi-arabia/" class="article-card">Yaser Al-Onaizan</a>
       <a href="" class="article-card">Ishwar Chander</a>
+      <a href="https://github.com/sdeneefe" class="article-card">Steve DeNeefe</a>
+      <a href="" class="article-card">Qing Dou</a>
       <a href="" class="article-card">Victoria Fossum (co-)</a>
-      <a href="" class="article-card">Liang Huang (co-)</a>
-      <a href="" class="article-card">Shou-De Lin (co-)</a>
+      <a href="" class="article-card">Marjan Ghazvininejad </a>
+      <a href="https://web.engr.oregonstate.edu/~huanlian/" class="article-card">Liang Huang (co-)</a>
+      <a href="https://en.wikipedia.org/wiki/Philipp_Koehn" class="article-card">Philipp Koehn</a>
+      <a href="" class="article-card">Irene Langkilde</a>
+      <a href="https://www.csie.ntu.edu.tw/~sdlin/" class="article-card">Shou-De Lin (co-)</a>
+      <a href="https://jonmay.github.io/webpage/" class="article-card">Jonathan May</a>
+      <a href="" class="article-card">Nima Pourdamghani </a>
+      <a href="https://www.sravi.org/" class="article-card">Sujith Ravi </a>
+      <a href="" class="article-card">Xing Shi</a>
+      <a href="" class="article-card">Kenji Yamada</a>
     </div>
     <p><br>
     <h1 class="page-title">Masters Students</h1>
 	  <!--	  <center>Masters</center> -->
     <p>
     <div class="article-list">
-      <a href="https://kevincrawfordknight.github.io/papers/ms-thesis-nada2.pdf" class="article-card">Nada Aldarrab</a>
-      <a href="" class="article-card">Bryant Huang </a>
+      <a href="https://nadaaldarrab.github.io/" class="article-card">Nada Aldarrab</a>
+      <a href="https://aclanthology.org/people/b/bryant-huang/" class="article-card">Bryant Huang </a>
 
     </div>
     <p><br>
@@ -57,8 +57,8 @@
     <h1 class="page-title">Undergraduate Students</h1>
     <p>
     <div class="article-list">
-      <a href="" class="article-card">Barret Zoph</a>
-      <a href="" class="article-card">Jonathan Graehl</a>
+      <a href="https://github.com/graehl" class="article-card">Jonathan Graehl</a>
+      <a href="https://barretzoph.github.io/" class="article-card">Barret Zoph</a>
 
     </div>
 
