--- a/ai/students.html
+++ b/ai/students.html
@@ -23,7 +23,26 @@
   </header>
 
   <main>
-	  <!--	  <center>PhD</center> -->
+
+    <h1 class="page-title">Undergraduate Students</h1>
+    <p>
+    <div class="article-list">
+      <a href="https://github.com/graehl" class="article-card">Jonathan Graehl</a>
+      <a href="https://barretzoph.github.io/" class="article-card">Barret Zoph</a>
+    </div>
+
+    <p><br>
+
+    <h1 class="page-title">Masters Thesis Students</h1>
+	  <!--	  <center>Masters</center> -->
+    <p>
+    <div class="article-list">
+      <a href="https://nadaaldarrab.github.io/" class="article-card">Nada Aldarrab</a>
+      <a href="https://aclanthology.org/people/b/bryant-huang/" class="article-card">Bryant Huang </a>
+    </div>
+
+    <p><br>
+
     <h1 class="page-title">PhD Students</h1>
 	  <p>
     <div class="article-list">
@@ -42,24 +61,6 @@
       <a href="https://www.sravi.org/" class="article-card">Sujith Ravi </a>
       <a href="" class="article-card">Xing Shi</a>
       <a href="" class="article-card">Kenji Yamada</a>
-    </div>
-    <p><br>
-    <h1 class="page-title">Masters Students</h1>
-	  <!--	  <center>Masters</center> -->
-    <p>
-    <div class="article-list">
-      <a href="https://nadaaldarrab.github.io/" class="article-card">Nada Aldarrab</a>
-      <a href="https://aclanthology.org/people/b/bryant-huang/" class="article-card">Bryant Huang </a>
-
-    </div>
-    <p><br>
-    <!--	  <center>Undergrad</center> -->
-    <h1 class="page-title">Undergraduate Students</h1>
-    <p>
-    <div class="article-list">
-      <a href="https://github.com/graehl" class="article-card">Jonathan Graehl</a>
-      <a href="https://barretzoph.github.io/" class="article-card">Barret Zoph</a>
-
     </div>
 
   </main>
