--- a/ai/students.html
+++ b/ai/students.html
@@ -38,7 +38,7 @@
     <p>
     <div class="article-list">
       <a href="https://nadaaldarrab.github.io/" class="article-card">Nada Aldarrab</a>
-      <a href="https://aclanthology.org/people/b/bryant-huang/" class="article-card">Bryant Huang </a>
+      <a href="" class="article-card">Bryant Huang </a>
     </div>
 
     <p><br>
