--- a/art/book.html
+++ b/art/book.html
@@ -18,14 +18,28 @@
       </ul>
     </nav>
     <h1 class="page-title">Book</h1>
+    <!--
     <div class="hero">
       <img src="in-theory-cover-final2.png" alt="Kevin Knight" class="headshot">
     </div>
+    -->
   </header>
 
-  <!-- Main content -->
   <main>
+
+
+	  <center>
+    <div class="gallery thumbs">
+      <a href="https://www.amazon.com/dp/B0B92HRJWG" class="thumb">
+        <figure>
+          <img src="in-theory-cover-final2.png" alt="In Theory">
+        </figure>
+      </a>
+    </div>
+	  </center>
+<!--
     <p class="intro">available on amazon</p>
+-->
   </main>
 
   <!-- Footer -->
