--- a/art/paintings.html
+++ b/art/paintings.html
@@ -338,18 +338,20 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Consistency Of Arithmetic</strong><br>oil on canvas, 48x24, 2022</figcaption>
 </figure>
 
+<!--
 <figure class="painting" data-category="available" data-title="Cool Britannia"
         data-medium="oil on canvas" data-size="40x30" data-year="2019"
         data-full="cool-britannia-40x30.jpg">
   <img src="cool-britannia-40x30.jpg" alt="Cool Britannia Thumbnail">
   <figcaption><strong>Cool Britannia</strong><br>oil on canvas, 40x30, 2019</figcaption>
 </figure>
+-->
 
-<figure class="painting" data-category="available" data-title="Co Prime"
+<figure class="painting" data-category="available" data-title="Co-Prime"
         data-medium="oil on canvas" data-size="36x36" data-year="2022"
         data-full="coprime-36x36.jpg">
-  <img src="coprime-36x36.jpg" alt="Co Prime Thumbnail">
-  <figcaption><strong>Co Prime</strong><br>oil on canvas, 36x36, 2022</figcaption>
+  <img src="coprime-36x36.jpg" alt="Co-Prime Thumbnail">
+  <figcaption><strong>Co-Prime</strong><br>oil on canvas, 36x36, 2022</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Crawford 1"
@@ -411,7 +413,7 @@ oil on canvas, 60x60, 2020
 </figure>
 
 <figure class="painting" data-category="available" data-title="Jenny Jax"
-        data-medium="oil on wood" data-size="28x22" data-year="2020"
+        data-medium="oil on canvas" data-size="28x22" data-year="2020"
         data-full="empire1-28x22.jpg">
   <img src="empire1-28x22.jpg" alt="Jenny Jax Thumbnail">
   <figcaption><strong>Jenny Jax</strong><br>oil on wood, 28x22, 2020</figcaption>
@@ -763,13 +765,6 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Statue</strong><br>oil on canvas, 36x36, 2016</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Stop Consuming"
-        data-medium="oil on canvas" data-size="36x36" data-year="2015"
-        data-full="stop-consuming-36x36.jpg">
-  <img src="stop-consuming-36x36.jpg" alt="Stop Consuming Thumbnail">
-  <figcaption><strong>Stop Consuming</strong><br>oil on canvas, 36x36, 2015</figcaption>
-</figure>
-
 <figure class="painting" data-category="available" data-title="Stop Losing War"
         data-medium="oil on canvas" data-size="36x36" data-year="2013"
         data-full="stop-losing-war-36x36.jpg">
@@ -805,11 +800,18 @@ oil on canvas, 60x60, 2020
   <figcaption><strong>Touareg</strong><br>oil on canvas, 36x18, 2015</figcaption>
 </figure>
 
-<figure class="painting" data-category="available" data-title="Viku"
+<figure class="painting" data-category="available" data-title="Stop Consuming"
+        data-medium="oil on canvas" data-size="36x36" data-year="2015"
+        data-full="stop-consuming-36x36.jpg">
+  <img src="stop-consuming-36x36.jpg" alt="Stop Consuming Thumbnail">
+  <figcaption><strong>Stop Consuming</strong><br>oil on canvas, 36x36, 2015</figcaption>
+</figure>
+
+<figure class="painting" data-category="available" data-title="Victoria"
         data-medium="oil on canvas" data-size="40x30" data-year="2023"
         data-full="viku-40x30.jpg">
-  <img src="viku-40x30.jpg" alt="Viku Thumbnail">
-  <figcaption><strong>Viku</strong><br>oil on canvas, 40x30, 2023</figcaption>
+  <img src="viku-40x30.jpg" alt="Victoria Thumbnail">
+  <figcaption><strong>Victoria</strong><br>oil on canvas, 40x30, 2023</figcaption>
 </figure>
 
 <figure class="painting" data-category="available" data-title="Wait What 1"
