--- a/comics/book.html
+++ b/comics/book.html
@@ -15,7 +15,7 @@
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
-    <h1 class="page-title">Book</h1>
+    <h1 class="page-title">Tofu Buffet Book</h1>
   </header>
 
   <main> 
