--- a/newindex.html
+++ b/newindex.html
@@ -72,7 +72,7 @@
  "anybody seen the cat?",
  "is on the verge",
  "stands corrected",
- "is better than expected",
+ "better than expected",
  "wait, what?",
  "gets pulled over",
  "has half a brain",
