--- a/ai/index.html
+++ b/ai/index.html
@@ -11,10 +11,11 @@
   <header>
     <nav class="navbar">
       <ul>
-        <li> <a href="../newindex.html" title="Home" class="home-icon">🏠</a> </li>
 <!--
+        <li> <a href="../newindex.html" title="Home" class="home-icon">🏠</a> </li>
 	<li><a href="../newindex.html" class="home-icon">&#x2302;</a></li>
 -->
+      <li><a href="../newindex.html" class="home-icon"> <img src="tinyhouse.png" alt="Home"></a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
@@ -31,7 +32,13 @@
   <!-- Main content -->
   <main>
     <p>
-Dr. Knight is Chief Scientist at Threeven Labs. He previously served on the faculty of the University of Southern California (26 years), as Chief Scientist at Language Weaver, Inc. (9 years), and as Chief Scientist for Natural Language Processing at Didi Global (4 years). He received a PhD in computer science from Carnegie Mellon University and a bachelor's degree from Harvard University. Dr. Knight's research interests include machine translation, natural language generation, automata theory, decipherment of historical documents, and number theory. He has co-authored over 150 research papers on natural language processing, as well as the widely adopted textbook "Artificial Intelligence" (McGraw-Hill). Dr. Knight served as President of the Association for Computational Linguistics (ACL) in 2011, as General Chair for ACL in 2005, as General Chair for the North American ACL (NAACL) in 2016, and as co-program chair for the inaugural Asia-Pacific ACL (2020). He received an Outstanding Paper Award at NAACL 2018, and Test-of-Time awards at ACL 2022 and ACL 2023. He is a Fellow of the ACL and the Association for the Advancement of Artificial Intelligence (AAAI).
+Dr. Knight is Chief Scientist at Threeven Labs. He previously served on the faculty of the University of Southern California (26 years), as Co-Founder and Chief Scientist at Language Weaver, Inc. (9 years), and as Chief Scientist for Natural Language Processing at Didi Global (4 years). 
+<p>
+He received a PhD in computer science from Carnegie Mellon University and a bachelor's degree from Harvard University. Dr. Knight's research interests include machine translation, natural language generation, automata theory, decipherment of historical documents, and number theory. 
+<p>
+He has co-authored over 150 research papers on natural language processing, as well as the widely adopted textbook "Artificial Intelligence" (McGraw-Hill). 
+<p>
+Dr. Knight served as President of the Association for Computational Linguistics (ACL) in 2011, as General Chair for ACL in 2005, as General Chair for the North American ACL (NAACL) in 2016, and as co-program chair for the inaugural Asia-Pacific ACL (2020). He received an Outstanding Paper Award at NAACL 2018, and Test-of-Time awards at ACL 2022 and ACL 2023. He is a Fellow of the ACL and the Association for the Advancement of Artificial Intelligence (AAAI).
   </main>
 
   <!-- Footer -->
