--- a/ai/index.html
+++ b/ai/index.html
@@ -15,7 +15,7 @@
         <li> <a href="../newindex.html" title="Home" class="home-icon">🏠</a> </li>
 	<li><a href="../newindex.html" class="home-icon">&#x2302;</a></li>
 -->
-      <li><a href="../newindex.html" class="home-icon"> <img src="tinyhouse.png" alt="Home"></a></li>
+      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="articles.html">Articles</a></li>
         <li><a href="students.html">Students</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
