--- a/art/index.html
+++ b/art/index.html
@@ -11,6 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
+      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="paintings.html">Paintings</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="https://kevincrawfordknight.github.io/vita/CV_Knight.pdf">CV</a></li>
