--- a/fiction/index.html
+++ b/fiction/index.html
@@ -11,6 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
+      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="stories.html">Stories</a></li>
         <li><a href="books.html">Books</a></li>
         <li><a href="contact.html">Contact</a></li>
