--- a/math/index.html
+++ b/math/index.html
@@ -11,6 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
+      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="videos.html">Videos</a></li>
         <li><a href="book.html">Book</a></li>
         <li><a href="articles.html">Articles</a></li>
