--- a/movies/index.html
+++ b/movies/index.html
@@ -11,6 +11,7 @@
   <header>
     <nav class="navbar">
       <ul>
+      <li><a href="../newindex.html" class="home-icon"> <img src="../tinyhouse.png" alt="Home"></a></li>
         <li><a href="movies.html">Movies</a></li>
         <li><a href="tv.html">TV</a></li>
         <li><a href="https://www.imdb.com/name/nm8767421/">IMDB</a></li>
