--- a/comics/comics.html
+++ b/comics/comics.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Comics | Kevin Knight</title>
+  <title>Comics | Tofu Buffet</title>
   <link rel="stylesheet" href="../styles.css">
   <style>
     /* ─── comics viewer ───────────────────────────────────────── */
@@ -69,7 +69,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 Kevin Knight</p>
+    <p>&copy; 2025 Tofu Buffet</p>
   </footer>
 
   <script>
