--- a/likes/index.html
+++ b/likes/index.html
@@ -26,7 +26,7 @@
 	  <!--	  &#9829;<br><br> -->
 <span style="font-size:2em;">&#9829;</span><br><br>
 
-<a href="https://en.wikipedia.org/wiki/Don%27t_Get_Me_Wrong_(song)" class="nounderline">Don't Get Me Wrong by Pretenders</a><br><br>
+<a href="https://en.wikipedia.org/wiki/Don%27t_Get_Me_Wrong_(song)" class="nounderline">Don't Get Me Wrong by the Pretenders</a><br><br>
 <a href="https://en.wikipedia.org/wiki/Tangerine_(Led_Zeppelin_song)" class="nounderline">Tangerine by Led Zeppelin</a><br><br>
 <a href="https://www.drawright.com/band-horizon" class="nounderline">Drawing on the Right Side of the Brain</a><br><br>
 <a href="https://www.soundtransit.org/" class="nounderline">Seattle Light Rail from SeaTac</a><br><br>
